# Flack

./: README.md  application.py  channels.txt  pyproject.toml  test.js  test.py
static/: index.js  styles.css
templates/: hello.html  index.html  index_test.html  login.html  name.html  test.html
