[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["Laima Urnezaite <laima.urnezaite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
Flask-SocketIO = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
